--- a/theApp/main.html
+++ b/theApp/main.html
@@ -3,12 +3,28 @@
 <head>
     <title>MailMate</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\Lenovo\OneDrive\Desktop\mailMate\theApp\style.css">
 </head>
+
 <body>
-    <div id="app">
-        <h1>Welcome to MailMate</h1>
-        <p>Your email wingman for efficient communication.</p>
+    <div class="container">
+
+        <nav>
+         <svg xmlns="http://www.w3.org/2000/svg"  class="logoIcon"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
+         <h1 class="logoText">mailMate</h1>
+        <!-- <p class="tagline">Welcome to mailMate-Your email wingman </p>-->
+         <ui class="navLinks">
+            <li><svg xmlns="http://www.w3.org/2000/svg" class="icons"><path fill="currentColor" d="M12 4c-1.92 0-3.5 1.58-3.5 3.5c0 .93.38 1.78 1 2.41c-1.53 1-2.5 2.71-2.5 4.59c0 3.03 2.47 5.5 5.5 5.5c1.76 0 3.5-.46 5-1.34l-1-1.73c-1.22.7-2.6 1.07-4 1.07c-1.94 0-3.5-1.55-3.5-3.5a3.49 3.49 0 0 1 2.59-3.38l5.21-1.4l-.52-1.93L11.83 9c-.75-.1-1.33-.72-1.33-1.5c0-.84.66-1.5 1.5-1.5c.26 0 .5.07.75.2l1-1.73C13.22 4.16 12.61 4 12 4"/></svg></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" class="icons"><path fill="currentColor" d="M12.1 22q-2.1 0-3.937-.8t-3.2-2.162t-2.163-3.2T2 11.9q0-3.65 2.325-6.437T10.25 2q-.45 2.475.275 4.838t2.5 4.137t4.138 2.5T22 13.75q-.65 3.6-3.45 5.925T12.1 22"/></svg></li>
+            </ui>
+        </nav>
+       <!-- <svg xmlns="http://www.w3.org/2000/svg" class="Icons"><path fill="currentColor" d="M12.1 22q-2.1 0-3.937-.8t-3.2-2.162t-2.163-3.2T2 11.9q0-3.65 2.325-6.437T10.25 2q-.45 2.475.275 4.838t2.5 4.137t4.138 2.5T22 13.75q-.65 3.6-3.45 5.925T12.1 22"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="Icons"><path fill="currentColor" d="M12 4c-1.92 0-3.5 1.58-3.5 3.5c0 .93.38 1.78 1 2.41c-1.53 1-2.5 2.71-2.5 4.59c0 3.03 2.47 5.5 5.5 5.5c1.76 0 3.5-.46 5-1.34l-1-1.73c-1.22.7-2.6 1.07-4 1.07c-1.94 0-3.5-1.55-3.5-3.5a3.49 3.49 0 0 1 2.59-3.38l5.21-1.4l-.52-1.93L11.83 9c-.75-.1-1.33-.72-1.33-1.5c0-.84.66-1.5 1.5-1.5c.26 0 .5.07.75.2l1-1.73C13.22 4.16 12.61 4 12 4"/></svg>
+    --><!---->
+        </nav>
+
     </div>
+    
+    
 </body>
 </html>
