--- a/theApp/main.html
+++ b/theApp/main.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
     <link rel="stylesheet" type="text/css" href="C:\Users\Lenovo\OneDrive\Desktop\mailMate\theApp\style.css">
 </head>
-
+<!--im taking a break 9 nov-->
 <body>
     <div class="container">
 
